# imprint

./: .gitignore  CHANGELOG.md  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md  limitations-and-roadmap.md  ontology-contracts.md  privacy-and-recovery.md
hooks/: _bridge.py
install/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
release/: allowlist.txt
release/wheelhouse/: manifest.json  manifest.sha256
requirements/: runtime.in
src/imprint/: __init__.py  _version.py  backup.py  cli.py  config.py  constants.py  durable_io.py  lifecycle.py  paths.py  permissions.py  purge.py  urn.py
tests/: conftest.py
tests/acceptance/: artifact_lifecycle.py  native_authority.py  test_authority_linux.sh  test_authority_macos.sh  test_authority_windows.ps1  test_install_posix.sh  test_install_windows.ps1  test_upgrade_from_v300.sh
tests/adversarial/: test_authority_lifecycle.py  test_consent_revocation_graph.py  test_domain_transition_adversarial.py  test_durable_publication.py  test_human_authority.py  test_ingest_purge_portability.py  test_lifecycle_adversarial.py  test_purge_closure.py  test_release_security.py  test_retrieval_adversarial.py  test_semantic_reference_integrity.py  test_sqlite_sidecar_ownership.py  test_v301_authority_foundations.py  test_v301_default_product.py  test_v301_private_permissions.py  test_v301_store_backup_integrity.py  test_v301_truthful_runtime.py
tests/contract/: test_capture_boundaries.py  test_cli_hooks_integration.py  test_daily_inspection_cli.py  (+11 more)
(+84 files in other folders)
