[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imprint-local"
dynamic = ["version"]
description = "Local-first provenance-preserving judgment capture and retrieval for Claude Code"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
authors = [{name = "Richard Schefren"}]
dependencies = [
  "cryptography==48.0.1",
  "rfc8785==0.1.4",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<7",
  "tomli>=2,<3; python_version < '3.11'",
]
release = ["build==1.3.0"]

[project.scripts]
imprint = "imprint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "imprint._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "acceptance: clean-install or artifact acceptance",
  "windows: requires genuine Windows",
]
